# CRay

./: CMakeLists.txt  LICENSE  README.md
res/: cerberus.mtl
src/: main.cpp
